--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,11 @@
+# Global configuration applies to all scrape jobs.
+global:
+  scrape_interval: 15s  # How often to scrape targets by default.
+  scrape_timeout: 10s   # Timeout before a scrape is declared failed.
+
 scrape_configs:
-  - job_name: nestjs-observability-stack-service
-    scrape_interval: 15s
-    scrape_timeout: 10s
-    metrics_path: /metrics
+  - job_name: "nestjs-observability-stack-service"  # Name of the job for identification.
+    metrics_path: /metrics  # The endpoint where metrics are exposed.
     static_configs:
-      - targets: ["nestjs-observability-stack:3000"]
+      - targets: 
+          - "nestjs-observability-stack:3000"  # Target container and port.
