--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# compiled output
+# --- Build Output & Dependencies ---
 /dist
 /node_modules
 /build
 
-# Logs
+# --- Logs ---
 logs
 *.log
 npm-debug.log*
@@ -12,14 +12,15 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# OS
+# --- Operating System Files ---
 .DS_Store
 
-# Tests
+# --- Test Coverage & Output ---
 /coverage
 /.nyc_output
 
-# IDEs and editors
+# --- IDE & Editor Configurations ---
+# General IDEs and editors
 /.idea
 .project
 .classpath
@@ -28,29 +29,29 @@ lerna-debug.log*
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# Visual Studio Code (retain essential settings)
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# dotenv environment variable files
+# --- Environment Files ---
 .env
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
 
-# temp directory
+# --- Temporary Files & Directories ---
 .temp
 .tmp
 
-# Runtime data
+# --- Runtime Data ---
 pids
 *.pid
 *.seed
 *.pid.lock
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
+# --- Diagnostic Reports (Node.js) ---
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
